# ece6960-heterogeneous-computing

./: README.md
assignments/PA1/: .gitignore  CMakeLists.txt
assignments/PA1/main/: CMakeLists.txt  main.cpp
assignments/PA1/threadpool/: CMakeLists.txt  threadpool.cpp  threadpool.hpp
assignments/PA1/unittests/: CMakeLists.txt
assignments/PA2/: a.out  parallel-for-guided.cpp  parallel-reduction.cpp
exercise/: a.out  compile.sh  custom-async.cpp  job-queue.cpp  lambda_thread.cpp  lecture7-job-queue-cv.cpp  out.json  parallel-for-guided.cpp  parallel-for.cpp  parallel-transform.cpp  parallel_reduction-async.cpp  parallel_reduction-promise-refactored.cpp  parallel_reduction-promise.cpp  relaxed.cpp  task-parallelism.cpp  taskflow-matmul.cpp  taskflow-parallelism.cpp  thread_creation.cpp  threadpool-matmul.cpp  threadpool.cpp
exercise/gpu/: a.out  hello_world.cu
